--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   }
 }
