--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.56.0",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
